2002-04-09  Jeroen Zwartepoorte  <jeroen@xs4all.nl>

	* bonobo/bonobo-dock-item.c: (bonobo_dock_item_size_allocate):
	Remove space around toolbar handle widget so it looks like the
	gnome 1.4 handle.

2002-04-03  jacob berkman  <jacob@ximian.com>

	* bonobo/bonobo-ui-container.h: include gmacros.h before using a
	macro defined there (fixes nautilus build errors)

2002-04-01  Murray Cumming  <murrayc@usa.net>

	* bonobo/bonobo-a11y.h, bonobo/bonobo-control-internal.h,
	bonobo/bonobo-ui-container.h, bonobo/bonobo-ui-node-private.h,
	bonobo/bonobo-ui-node.h, bonobo/bonobo-ui-private.h,
	bonobo/bonobo-ui-util.h, bonobo/bonobo-ui-xml.h,
	bonobo/bonobo-window.h:	
	Added G_BEGIN_DECLS/G_END_DECLS for use with C++.

2002-03-29  Mark McLoughlin  <mark@skynet.ie>

	* bonobo/bonobo-plug.c: (bonobo_plug_button_event): ungrab the
	pointer here, so our parents can do grabs.

2002-04-01  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-sync-toolbar.c
	(create_dockitem): remove bogus double
	detachable check.
	(impl_bonobo_ui_sync_toolbar_update_root):
	set detachable (or not) on sync.

	* bonobo/bonobo-dock-item.c
	(bonobo_dock_item_set_locked): impl.

2002-03-28  jacob berkman  <jacob@ximian.com>

	* bonobo/bonobo-selector.c (signals): 
	* bonobo/bonobo-ui-engine.c (signals): these should be static

2002-03-28  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-file-selector-util.c
	(create_control): do an explicit construct to avoid
	the warning.

	* bonobo/bonobo-widget.c
	(bonobo_widget_launch_component): move activation
	exception warning to
	(bonobo_widget_new_control): here.

2002-03-27  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-window.c
	(bonobo_window_key_release_event): chain to
	key_release not key_press.

2002-03-26  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-toolbar-item.c
	(bonobo_ui_toolbar_item_class_init): clobber
	focus handling for items here.

	* bonobo/bonobo-dock-item-grip.c
	(bonobo_dock_item_grip_key_press_event): only